[tool.poetry]
name = "remotecv"
version = "3.0.0"
description = "remotecv is an OpenCV worker for facial and feature recognition"
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pyres = "^1.5"
Pillow = "^7.0.0"
opencv-python-headless = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"
pytest-tldr = "^0.2.1"
pytest-xdist = "^1.31.0"
pytest-asyncio = "^0.10.0"
pylint = "^2.4.4"
flake8 = "^3.7.9"
black = "^19.10b0"
preggy = "^1.4.4"
pytest-cov = "^2.8.1"
celery = "^4.4.1"
sentry-sdk = "^0.14.2"

[tool.poetry.scripts]
remotecv = 'remotecv.worker:main'

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
