[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'

[tool.poetry]
name = "remotecv"
version = "3.2.1"
authors = ["Bernardo Heynemann <heynemann@gmail.com>"]
description = "remotecv is an OpenCV worker for facial and feature recognition"
readme = "README.md"
license = "MIT"
keywords = ["imaging", "face", "detection", "feature", "thumbnail", "imagemagick", "pil", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Graphics :: Presentation",
]
include = ["remotecv/*/*/*.xml"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
opencv-python-headless = "^4.2.0"
Pillow = "^9.0.0"
pyres = "^1.5.0"
sentry-sdk = "^0.14.2"

[tool.poetry.dev-dependencies]
celery = "^4.4.1"
flake8 = "^4.0.1"
pylint = "^2.13.8"
black = "^22.1.0"
preggy = "^1.4.4"
pyssim = "^0.4"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.0"
coverage = "^6.3.2"

[tool.poetry.scripts]
remotecv = "remotecv.worker:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
